    name is already in use by the AROS MUI headers, but with a different meaning.
  * YAM_RE.c, tcp/smtp.c: fixed broken MorphOS build by pretending that the
    header file proto/usergroup.h has already been included if unistd.h is
    included. This is definitely a quirk of the MorphOS SDK.
  * extrasrc.h: added missing definition of NEED_STRCASESTR for the MorphOS
    build.

2012-04-12 Jens Langner <Jens.Langner@light-speed.de>

  * mui/FilterList.c: the filter list will also contain the current position
    now as this list is also a priority sorted list which should be more clear
    by showing the position explicity.
  * mui/AccountList.c: we now display the order number in the AccountList
    so that the order of server is more clearly visible.
  * YAM_COs.c: fixed forgotten read routines for new SMTP-Enabled and
    SMTP-Description options in YAM config.
  * YAM_COs.c: beautified config output for SMTP server so that it is properly
    aligned to the POP server output in the .config file.
  * YAM_COg.c: forgot to add notify for SMTP AUTH cycle gadget.
  * YAM_COg.c, misc: redesigned the TCP/IP configuration page of the YAM
    configuration window to be somewhat more intuitive. In addition, multiple
    SMTP servers can now be added in the GUI and will also be saved in the
    corresponding config file. However, to be able to send mails over alternative
    SMTP servers the multi identity support is still missing, which will be the
    next step.

2012-04-11 Jens Langner <Jens.Langner@light-speed.de>

  * Debug.c: implemented debug_files variable checking so that the debug framework
    can now also be used to specify a number of filenames in the env variable for
    which the debug output will be turned on.

2012-04-10 Jens Langner <Jens.Langner@light-speed.de>

  * tcp/smtp.c, YAM_RE.c: gethostname() is now used instead of relying on the
    user to specify a domain part in the SMTP configuration. In fact, according