@@ -1,0 +1,62 @@
+/***************************************************************************
+
+ YAM - Yet Another Mailer
+ Copyright (C) 1995-2000 Marcel Beck
+ Copyright (C) 2000-2012 YAM Open Source Team
+
+ This program is free software; you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation; either version 2 of the License, or
+ (at your option) any later version.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program; if not, write to the Free Software
+ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+ YAM Official Support Site :  http://www.yam.ch
+ YAM OpenSource project    :  http://sourceforge.net/projects/yamos/
+
+ NOTE:
+ This implementation was inspired/ported by the glibc version of getline()
+ and getdelim().
+
+ $Id$
+
+***************************************************************************/
+
+#include <sys/utsname.h>
+
+#include "extrasrc.h"
+
+#if defined(NEED_GETHOSTNAME)
+
+int gethostname(char *name, size_t len)
+{
+  int result = -1;
+
+  ENTER();
+
+  if(name != NULL)
+  {
+    struct utsname uts;
+
+    // obtain some information about the current kernel
+    if((result = uname(&uts)) != -1)
+    {
+	  // use the domain name as host name
+	  strlcpy(name, uts.domainname, len);
+	}
+  }
+
+  RETURN(result);
+  return result;
+}
+
+#else
+  #warning "NEED_GETHOSTNAME missing or compilation unnecessary"
+#endif
